--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body {
 
 canvas {
     position: absolute;
-    filter: blur(5px);
+    filter: blur(3px);
 }
 
 #green {
@@ -36,6 +36,7 @@ canvas {
     width: 800px;
     height: 500px;
     margin: 20px;
+    
 }
 
 .loginbG {
@@ -49,6 +50,7 @@ canvas {
     background: rgba(255, 255, 255, 0.2);
     box-shadow: inset 0 5px 45px rgba(255, 255, 255, 0.15);
     border-radius: 20px;
+    box-shadow: inset 4px 4px 6px #5555558e;
 }
 
 .loginbG .box {
@@ -77,6 +79,8 @@ canvas {
     font-weight: 500;
     border: none;
     border-radius: 20px;
+    transition: 0.5 all;
+    box-shadow: inset 2px 2px 2px rgba(167, 166, 166, 0.46);
 }
 
 .formbG {
@@ -94,6 +98,7 @@ canvas {
     align-items: center;
     transition: 0.5s ease-in-out;
     overflow: hidden;
+    
 }
 
 .formbG.left {
@@ -139,11 +144,16 @@ canvas {
     margin-bottom: 20px;
     padding: 10px;
     outline: none;
-    transition: 0.5s all;
+    transition: 0.5s ease-in-out;
     border-top: none;
     border-left: none;
     border-right: none;
-    border-bottom: solid 1.4px;
+    border-bottom: solid 1.4px #333;
+}
+
+.formbG .loginForm form #blank:focus {
+    transition: 0.5s ease-in-out;
+    border-bottom: solid 1.4px #000;
 }
 
 .formbG .loginForm form #blank::placeholder {
@@ -164,13 +174,16 @@ canvas {
     font-weight: 500;
     padding: 12px;
     background: linear-gradient(to left, #00FF41, #00ff9d);
-    transition: 0.5s ease-in-out;
-    
+    transition: 0.3s ease-in-out;
+    box-shadow: inset 4px 4px 6px #adfdc1;
 }
 
 .formbG .loginForm form #btn:hover {
-    transition: 0.5s ease-in-out;
-    box-shadow: 0 0 7px rgba(0, 0, 0, 0.2);
+    transition: 0.3s ease-in-out;
+    box-shadow: inset 4px 4px 6px #72727277;
+    background: #000;
+    color: #00FF41;
+    
 }
 
 .formbG .loginForm a {
@@ -180,7 +193,7 @@ canvas {
 
 .formbG .loginForm a span {
     text-decoration: none;
-    color: rgb(201, 123, 123);
+    color: rgb(244, 98, 98);
     transition: 0.5s ease-in-out;
 }
 
@@ -215,11 +228,16 @@ canvas {
     margin-bottom: 20px;
     padding: 10px;
     outline: none;
-    transition: 0.5s all;
+    transition: 0.5s ease-in-out;
     border-top: none;
     border-left: none;
     border-right: none;
-    border-bottom: solid 1.4px;
+    border-bottom: solid 1.4px #333;
+}
+
+.formbG .signupForm form #blank:focus {
+    transition: 0.5s ease-in-out;
+    border-bottom: solid 1.4px #000;
 }
 
 .formbG .signupForm form #blank::placeholder {
